# TIC-AI-Tab-Assistant

./: .gitattributes  .gitignore  CHECK_MODEL.md  PIPELINE_OVERVIEW.md  PRICE_TRACKING_GUIDE.md  PROJECT_EXPLANATION.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP_OLLAMA.md  START_SERVER.bat  START_SERVER.ps1  SWITCH_LLM_PROVIDER.md  TEST_COMMANDS.md  package-lock.json  package.json
backend/: __init__.py  agent_server.py  config.py  pyproject.toml
backend/agents/: __init__.py  alert_agent.py  fact_extractor.py  intent_router.py  memory_agent.py  planner_agent.py  price_extraction_agent.py  price_tracking_agent.py  prompt_planning_agent.py  simple_agent.py  tab_classifier_agent.py  tab_reader_agent.py  tab_summary_agent.py
backend/data/: tabsensei.db
backend/database/: __init__.py  db.py  models.py
backend/demo/: demo_mode.py
backend/demo/sample_pages/: README.txt
backend/utils/: __init__.py  price_utils.py  text_utils.py
extension/: background.js  manifest.json
extension/content/: overlay.css  overlay.js  reminder-notification.js
extension/popup/: panel.css  panel.html  panel.js
extension/utils/: price_extractor.js
